fixed header h1 spacing

--- a/main.css
+++ b/main.css
@@ -21,6 +21,7 @@ body{
     justify-content: center;
     background-color: rgba(255,255,255,0.8);
     box-shadow: 3px 2px 1px 2px rgba(0, 0, 0, .1);
+    padding-top: .6rem;
     height: 10vh;   
     z-index: 4; 
 }
